--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,10 @@ attrs==23.2.0
 certifi==2024.7.4
 charset-normalizer==3.3.2
 expecttest==0.2.1
-ffmpeg==1.4
+ffmpeg-python==0.2.0
 filelock==3.15.4
 fsspec==2024.6.1
+future==1.0.0
 hashin==1.0.1
 huggingface-hub==0.24.0
 hypothesis==6.108.2
